# leancert

./: .gitignore  404.html  CNAME  COMMERCIAL.md  LICENSE  LeanBound.lean  LeanCert.lean  Main.lean  README.md  index.html  lake-manifest.json  lakefile.toml  mkdocs.yml  objects.inv  sitemap.xml
.forgeoffice/: CURRENT_STATE.md  state_history.jsonl
.github/workflows/: build-wheels.yml  docs.yml  lean_action_ci.yml  mathlib-update.yml  soundness-guard.yml  tag-toolchain.yml
LeanBound/: Bridge.lean  Discovery.lean
LeanBound/Core/: DerivativeIntervals.lean  Dyadic.lean  Expr.lean  Interval.lean  IntervalDyadic.lean  IntervalReal.lean  IntervalRealEndpoints.lean  Taylor.lean
LeanBound/Discovery/: Commands.lean  Find.lean  Types.lean
LeanBound/Examples/: Basic.lean  Calculus.lean  Certificate.lean  GlobalOptimization.lean  Numerics.lean  Tactics.lean
LeanBound/ML/: Attention.lean  Softmax.lean  Transformer.lean
LeanBound/Meta/: ProveContinuous.lean  ProveSupported.lean  ToExpr.lean
LeanBound/Numerics/: AD.lean  Certificate.lean  Extended.lean  FloatEval.lean  Integrate.lean  IntervalEval.lean  IntervalEvalDyadic.lean  IntervalEvalReal.lean  IntervalEvalRefined.lean  Optimize.lean  SearchAPI.lean  TaylorModel.lean
LeanBound/Tactic/: Discovery.lean  DyadicAuto.lean  Interval.lean  IntervalAuto.lean  Refute.lean  TestAuto.lean  TestDiscovery.lean
LeanBound/Test/: BridgeTest.lean  SqrtTest.lean  TransformerTest.lean
LeanCert/: ANT.lean  Bridge.lean  CertifiedBounds.lean  CheckCompat.lean  ConstantFactory.lean  Discovery.lean  Examples.lean  QProduct.lean  Tactic.lean  Validity.lean
LeanCert/ANT/: Abel.lean  Asymp.lean  Dirichlet.lean  EulerProduct.lean  Mertens.lean  PNTCompilers.lean  PrimePowerExt.lean  Step.lean
LeanCert/API/: Backend.lean  Eval.lean  Optimization.lean
LeanCert/Analysis/: ContourShift.lean  (+1 more)
Tests/: AxiomAudit.lean  AxiomAuditIntegration.lean  Table.lean
choosing-proof-shape/: index.html
choosing-tactics/: index.html
discovery/: index.html
docs/: ant.md  chebyshev.md  choosing-proof-shape.md  choosing-tactics.md  end-to-end-example.md  index.md  qproduct.md  quickstart.md  tactics.md  troubleshooting.md
end-to-end-example/: index.html
examples/: Li2Verified.lean  Lyapunov.lean
python/: MANIFEST.in  README.md  pyproject.toml
python/leanbound/: __init__.py  client.py  config.py  domain.py  exceptions.py  expr.py  rational.py  result.py  simplify.py  solver.py  validation.py
python/leanbound/tests/: __init__.py  test_api.py  test_domain.py  test_expr.py  test_rational.py  test_result.py  test_simplify.py
python/leancert/: __init__.py  client.py  nn.py  result.py  solver.py
python/leancert/tests/: test_config.py  test_expr.py  test_result.py
python/pytorch/: index.html
python/validation/: index.html
quickstart/: index.html
scripts/: bezout_cert.py  mathlib_stable_update.py  smoke_test_executables.py
search/: search_index.json
tactics/: index.html
troubleshooting/: index.html
(+445 files in other folders)
